# jepa-wms

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  OPTIMIZATION_DEPS.md  README.md  THIRD-PARTY-LICENSES.md  hubconf.py  pyproject.toml  requirements-optimization.txt  setup_macros.py  slurm_opt_qos.py
.github/: pull_request_template.md
.github/workflows/: base_tests.yaml  linters.yaml
app/: main.py  main_distributed.py  main_hydra.py  scaffold.py
app/plan_common/datasets/: droid_dset.py  metaworld_dset.py  metaworld_hf_dset.py  point_maze_dset.py  preprocessor.py  pusht_dset.py  robocasa_dset.py  traj_dset.py  transforms.py  utils.py  wall_dset.py
app/plan_common/models/: AdaLN_vit.py  ac_predictor_upd.py  decoder.py  dino.py  losses.py  lpips.py  lpips_loss.py  modules.py  prop_embedding.py  state_decoder.py  trainable_model.py  vision_transformer.py  vit.py  wm_heads.py
app/plan_common/plot/: aliases.py  logs_plan_joint_per_design_choice.py  logs_plan_joint_unif_utils.py  logs_planning_joint.ipynb  logs_planning_joint_minimal.ipynb
app/vjepa_wm/: train.py  utils.py  video_wm.py
configs/hydra/: defaults.yaml
configs/hydra/launcher/: submitit_slurm.yaml
configs/online_plan_evals/droid/: droid_L1_cem_sourcedset_H1_nas1_maxnorm01_ctxt2_gH1.yaml  droid_L1_cem_sourcedset_H3_nas3_maxnorm01_ctxt2_gH3.yaml  droid_L1_cem_sourcedset_H6_nas6_maxnorm01_ctxt2_gH6.yaml  droid_L2_cem_sourcedset_H1_nas1_maxnorm01_ctxt2_gH1.yaml  droid_L2_cem_sourcedset_H3_nas3_maxnorm01_ctxt2_gH3.yaml  droid_L2_cem_sourcedset_H6_nas6_maxnorm01_ctxt2_gH6.yaml
configs/online_plan_evals/mw/: reach-wall_L1_cem_sourcexp_H6_nas3_ctxt2.yaml  reach-wall_L2_cem_sourcexp_H6_nas3_ctxt2.yaml  reach_L1_cem_sourcexp_H6_nas3_ctxt2.yaml  reach_L2_cem_sourcexp_H6_nas3_ctxt2.yaml
configs/online_plan_evals/mz/: mz_L1_cem_sourcedset_H6_nas6_ctxt2.yaml  mz_L1_cem_sourcerandstate_H6_nas6_ctxt2.yaml  (+2 more)
evals/: evals_launcher.py  main.py  main_distributed.py  scaffold.py  utils.py
evals/dino_wm_plan/: plan.py  visual_world_model.py
evals/simu_env_planning/: README.md  Readme.md  eval.py  run_eval_grid.py
evals/unroll_decode/: demo_data.npz  eval.py
models/: __init__.py  proprio.py  vit.py  vqvae.py
src/datasets/: data_manager.py  imagenet1k.py  video_dataset.py
src/masks/: utils.py
src/models/: ac_predictor.py  attentive_pooler.py  predictor.py  vision_transformer.py  vision_transformer_v2.py
src/scripts/: download_data.py  generate_droid_paths.py  generate_metaworld_paths.py
src/utils/: checkpoint_loader.py  cluster.py  distributed.py  logging.py  schedulers.py  yaml_utils.py
tests/: __init__.py
tests/datasets/: test_dataloader.py  test_memory_efficient_sampler.py  test_plan_common_transforms.py  test_vjepa_transforms.py
tests/models/: test_encoders.py  test_models.py  test_predictor.py
(+454 files in other folders)
